--- a/index.css
+++ b/index.css
@@ -1,38 +1,39 @@
-body{
-    background-color: darkgrey;
+body {
+  background-color: darkgrey;
 }
 
-body{
-    color: white;
+body {
+  color: white;
 }
 
-.clicked{
-    background-color: orange;
+.clicked {
+  background-color: orange;
 }
 
 .form,
-.user{
-    display: none;
+.user {
+  display: none;
 }
 
-.showing{
-    display: block;
+.showing {
+  display: block;
 }
 
-@keyframes fadeIn{
-    from{
-        opacity: 0;
-    } to {
-        opacity: 1;
-    }
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
-.bgImage{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    animation: fadeIn .5s linear;
+.bgImage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  animation: fadeIn 0.5s linear;
 }
